--- a/solclientjs/TopicSubscriber.html
+++ b/solclientjs/TopicSubscriber.html
@@ -7,9 +7,9 @@
     to you under the Apache License, Version 2.0 (the
     "License"); you may not use this file except in compliance
     with the License.  You may obtain a copy of the License at
-    
+
       http://www.apache.org/licenses/LICENSE-2.0
-    
+
     Unless required by applicable law or agreed to in writing,
     software distributed under the License is distributed on an
     "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -20,22 +20,22 @@
 
 <!--
     Solace Systems Web Messaging API for JavaScript
-    RequestReply tutorial - Basic Requestor
-    Demonstrates sending a request and receiving a reply
+    PublishSubscribe tutorial - Topic Subscriber
+    Demonstrates subscribing to a topic for direct messages and receiving messages
 -->
 
 <html lang="en">
     <head>
-        <title>Solace Systems Web Messaging API for JavaScript, RequestReply tutorial - Basic Requestor</title>
+        <title>Solace Web Messaging </title>
         <meta charset="utf-8"/>
 
         <!-- Load Solace Systems Web Messaging API for JavaScript -->
         <script src="lib/solclient-debug.js"></script>
 
-        <!-- Load the RequestReply Basic Requestor tutorial -->
-        <script src="BasicRequestor.js"></script>
+        <!-- Load the PublishSubscribe Topic Subscriber tutorial -->
+        <script src="TopicSubscriber.js"></script>
 
-        <!-- Execute the RequestReply Basic Requestor tutorial -->
+        <!-- Execute the PublishSubscribe Topic Subscriber tutorial -->
         <script>
             window.onload = function () {
                 // enable logging to JavaScript console at INFO level
@@ -43,28 +43,29 @@
                 var factoryProps = new solace.SolclientFactoryProperties();
                 factoryProps.logLevel = solace.LogLevel.INFO;
                 solace.SolclientFactory.init(factoryProps);
-                // create the requestor, specifying name of the request topic
-                var requestor = new BasicRequestor('tutorial/topic');
-                // assign buttons to the requestor functions
-                document.getElementById("connect").addEventListener("click", requestor.connect);
-                document.getElementById("disconnect").addEventListener("click", requestor.disconnect);
-                document.getElementById("request").addEventListener("click", requestor.request);
+                // create the subscriber, specifying name of the subscription topic
+                var subscriber = new TopicSubscriber('>');
+                // assign buttons to the subscriber functions
+                document.getElementById("connect").addEventListener("click", subscriber.connect);
+                document.getElementById("disconnect").addEventListener("click", subscriber.disconnect);
+                document.getElementById("subscribe").addEventListener("click", subscriber.subscribe);
+                document.getElementById("unsubscribe").addEventListener("click", subscriber.unsubscribe);
             };
         </script>
     </head>
     <body>
-        <h1>Solace Systems Web Messaging API for JavaScript</h1>
-        <h2>RequestReply Tutorial</h2>
-        <h3>Basic Requestor</h3>
+        <h1>Solace Hackathon</h1>
+        <h2>Mesh Network topic subscriber </h2>
+        Press connect then subscribe to see if your message are being received into the core network
         <p>
-            <label>Solace router web transport URL: </label><input type = "text" id = "host" value = "XXX.XXX.XXX.XXX:80" />
+            <label>Solace router web transport URL: </label><input type = "text" id = "host" value = "52.220.223.99:80" />
             <button id="connect">Connect</button>
             <button id="disconnect">Disconnect</button>
         </p>
         <p>
-            <button id="request">Send Request</button>
+            <button id="subscribe">Subscribe</button>
+            <button id="unsubscribe">Unsubscribe</button>
         </p>
         <textarea id="log" rows="20" cols="90" autofocus></textarea>
     </body>
 </html>
-
